# argon

./: .env.example  Cargo.toml  api.json  docker-compose.yml
core/: Cargo.toml
core/src/: auth.rs  config.rs  controller.rs  lib.rs  model.rs  response.rs
docs/: utoipa.md
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_user_table.rs
src/: main.rs
src/app/: mod.rs
src/app/controller/: mod.rs
src/app/middleware/: auth.rs
src/app/model/: user.rs
src/app/response/: mod.rs
src/bootstrap/: env.rs  mod.rs  server.rs  tracing.rs
src/config/: app.rs
src/core/controller/: mod.rs
src/docs/: mod.rs
src/routes/: mod.rs
