[workspace]
members = [".", "migration"]

[package]
name = "argon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7", features = ["ws", "http2", "multipart"]}
tokio = {version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"]}
tracing = "0.1.43"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json" ] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
dotenvy = "0.15.7"
