[package]
name = "argon_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7"}
serde = {version = "1.0.228", features = ["derive"]}
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json" ] }
serde_json = "1.0.145"
anyhow = "1.0.100"
tracing = "0.1.43"
